// protoc --go_out=. *.proto
syntax = "proto3";

package marketplace;

option go_package = ".;marketplace";

// Mail Service
message EmailRequest {
    repeated string to = 1;
    string contentType = 2;
    string subject = 3;
    bytes body = 4;
}

message EmailResponse {
}

service MailerService {
    rpc SendEmails(EmailRequest) returns (EmailResponse);
}

// Auth service 
message AuthRequest {
}

message AuthResponse {
}

service AuthService {
    rpc AuthByEmail(AuthRequest) returns (AuthResponse);
}
